# project-hasu-revamp

./: .gitignore  Cargo.toml  lefthook.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  supergraph.yml
profile-service/: Cargo.toml  docker-compose.dev.yml  init.sql  package.json
profile-service/src/: db.rs  main.rs  models.rs  schema.rs
user-service/: Cargo.toml  package.json
user-service/src/: main.rs  schema.rs
