[workspace]
resolver = "3"
members = [ "profile-service","user-service"]
default-members = ["user-service", "profile-service"]

[workspace.dependencies]
tokio = { version = "1.44.1", features = ["full"] }
async-graphql = { version = "7.0.16", features = ["dataloader", "uuid"] }
async-graphql-axum = "7.0.16"
axum = "0.8.1"
dotenv = "0.15.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
